kendini tanitma ödevi sonrasi derslerde islenen, listeler ve emmetler eklendi.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,105 @@
+<!-- paragraf ve basliklar -->
+
 <h1>A. Eymen Alpat</h1> <!-- H1 olarak ismimi yazdırdım-->
 <h2>Hakkımda</h2> <!-- Alt baslik olarak hakkimda basligini attim-->
 <!-- alttaki iki satirda ise paragraf olarak sevdiklerimden bahsettim. -->
 <p>Merhaba, ben Eymen Alpat. Yıldız Teknik Üniversitesi Bilgisayar ve Öğretim Teknolojileri eğitimi 2. sınıf öğrencisiyim. Şuanda da İspanya'da Erasmus yapmaktayım.</p>
 <p>Dizi izlemekten hoşlanırım, aynı zamanda voleybol oynamayı da severim. </p>
+
+<!-- Listeler -->
+<p>-------------------------------------------------------------------------------------------------------</p>
+<b><p>asagida bazi seyler sacma olabilir ama yorum satirinda yazdigim icin aciklamalari görmek için sayfa kaynagini inceleyebilirsin</p></b>
+<ul> 
+    <li><h1>Listeler</h1> 
+    </li>
+
+</ul>
+
+<!-- Sıralı ve sırasız olmak üzere 2 tane liste tiği vardır -->
+<!-- Ordered List > ol -->
+<!-- Unordered list > ul -->
+<p> Ordered List > ol  </p>
+<p> Unordered list > ul </p>
+<h2> Koşu Yarışmasının Sıralaması:</h2>
+<ol>
+    <li>Mehmet</li>
+    <li>Ayse</li>    
+    <li>Eymen</li>
+</ol>
+
+<h2> Koşu Yarışmasının Sıralamalarına göre ödülleri:</h2>
+<ul>
+    <li>Altın Madalya</li>
+    <li>Gümüş Madalya</li>    
+    <li>Bronz Madalya</li>
+</ul>
+
+<!-- Emmet ile daha hızlı html yapıları -->
+<ul>
+    <li><h2>Emmet ile daha hızlı html yapıları</h2>
+    </li>
+</ul>
+<!-- 
+   etiket isimlerini direkt verebilirsin, yani p, tab yaptıgında paragraf
+   + kardes öge
+   > icinde öge
+   ^ yukari cik ve öge olustur
+   * carp, elementten kaç tane istiyosan
+   lorem ????
+   . class olustur
+   # id olustur
+ -->
+
+ <!-- Kardes element
+      h1+p+p+p+h2+p+p enter bas hepsi gelcek
+-->
+<h1></h1>
+<p></p>
+<p></p>
+<p></p>
+<h2></h2>
+<p></p>
+<p></p>
+<!-- h1+p+p+p+h2+p+p çarp h1+p*3+h2+p*2 haliyle -->
+<h1></h1>
+<p></p>
+<p></p>
+<p></p>
+<h2></h2>
+<p></p>
+<p></p>
+
+<!-- ul içinde li elemanı istiyosan ul>li -->
+<ul>
+    <li></li>
+</ul>
+<!-- ^ yukarı cikma bir üst dizine cikartir -->
+<!-- ul>li*3^p*2+h3 -->
+<ul>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
+<p></p>
+<p></p>
+<h3></h3>
+<!-- ul>li*3^p*2+h3 yukarı cikmadan hali: -->
+<ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <p></p>
+    <p></p>
+    <h3></h3>
+</ul>
+<!-- lorem, anlamsız yazı bütünü bilon iste -->
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eligendi dolores quia minima, perspiciatis laborum eos hic tempore vero facere ad soluta illo, amet doloremque corrupti labore. Possimus, nam nobis!</p>
+<!-- lorem'in yanına sayı yazdığında o sayı kadar kelime yazıyor lorem4 -->
+<p>Lorem ipsum dolor sit.</p>
+
+<!-- . koymak klass oluşturur h3.deneme>lorem1 -->
+<h3 class="deneme">Lorem.</h3>
+<!-- # koymak id olusturur h3#deneme>lorem1 -->
+<h3 id="deneme">Lorem.</h3>
+<!-- . ve # aynı anda koyarsan id ve class olusturur h3.deneme#deneme>lorem1 -->
+<h3 class="deneme" id="deneme">Lorem.</h3>
