readme guncellendi, gitignore eklendi, indexte ise görsellerle calismak kismi tamamlandı, bilgisayardan ve internette görsel eklendi.

--- a/index.html
+++ b/index.html
@@ -103,3 +103,13 @@
 <h3 id="deneme">Lorem.</h3>
 <!-- . ve # aynı anda koyarsan id ve class olusturur h3.deneme#deneme>lorem1 -->
 <h3 class="deneme" id="deneme">Lorem.</h3>
+
+<p>-------------------------------------------------------------------------------------------------------</p>
+<h2>Görsellerle Çalışmak</h2>
+
+<!-- img -->
+<!-- src kısmı source, görselin kaynağı, alt ise alternatif aciklama -->
+<img src="https://assets.ubuntu.com/v1/83ff4203-awshp-strip-customers.png" alt=" aws görseli">
+<!-- resim icin lorem picsumu kullan -->
+
+<img src="images/1.jpg" alt="tren miren">
