iletisim sayfası eklendi, index sayfasinda da linklerle calisildi

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- paragraf ve basliklar -->
+<a href="#footer">en alt kısma git</a>
 
 <h1>A. Eymen Alpat</h1> <!-- H1 olarak ismimi yazdırdım-->
 <h2>Hakkımda</h2> <!-- Alt baslik olarak hakkimda basligini attim-->
@@ -113,3 +114,31 @@
 <!-- resim icin lorem picsumu kullan -->
 
 <img src="images/1.jpg" alt="tren miren">
+
+<h2>Linkler İle Çalışmak</h2>
+<ul>
+    <li>Baska bir web sitesine git</li>
+    <li>ayni sayfa icinde baska bir yere git</li>
+    <li>mail at</li>
+    <li>telefon et</li>
+    <li>baska bir sayfaya git</li>
+    
+</ul>
+<h4>baska bir sayfaya git href ile kullanılır target kullanırsan yeni sekmeden acabilirsin</h4>
+    <a href="https://kodluyoruz.org" target="_blank">kodluyoruza gidecek</a>
+    <br>
+    <a href="iletisim.html">
+        İletisim sayfasına git
+    </a>
+    <br>
+    <a href="mailto:eymenalpat0@gmail.com">
+        Eymen'e mail at
+    </a>
+    <br>
+
+    <a href="tel:0555555555">
+        Telefon ac
+    </a>
+    
+
+    <h2 id="footer">En alt Kısım</h2>
