--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!-- paragraf ve basliklar -->
 <a href="#footer">en alt kısma git</a>
+<br>
+<a href="kisiselsayfam.html">Ödev Sayfasına git</a>
 
 <h1>A. Eymen Alpat</h1> <!-- H1 olarak ismimi yazdırdım-->
 <h2>Hakkımda</h2> <!-- Alt baslik olarak hakkimda basligini attim-->
