--- a/iletisim.html
+++ b/iletisim.html
@@ -1,10 +1,21 @@
-<a href="index.html">
-    Ana Sayfaya git
-</a>
-
-<h1>İletişim sayfası</h1>
-<p>Lorem ipsum dolor sit amet consectetur.</p>
-<p>Quae aliquid atque minima laboriosam numquam?</p>
-<p>Quasi dignissimos voluptate laborum enim quidem?</p>
-<p>Eveniet necessitatibus a culpa amet laudantium.</p>
-<p>Quis nulla error officia eveniet! Debitis.</p>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>İletişim Sayfası</title>
+</head>
+<body>
+    <a href="index.html">
+        Ana Sayfaya git
+    </a>
+    
+    <h1>İletişim sayfası</h1>
+    <p>Lorem ipsum dolor sit amet consectetur.</p>
+    <p>Quae aliquid atque minima laboriosam numquam?</p>
+    <p>Quasi dignissimos voluptate laborum enim quidem?</p>
+    <p>Eveniet necessitatibus a culpa amet laudantium.</p>
+    <p>Quis nulla error officia eveniet! Debitis.</p>
+</body>
+</html>
