--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<!-- paragraf ve basliklar -->
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anasayfa</title>
+</head>
+<body>
+    <!-- paragraf ve basliklar -->
 <a href="#footer">en alt kısma git</a>
 <br>
 <a href="kisiselsayfam.html">Ödev Sayfasına git</a>
@@ -144,3 +153,6 @@
     
 
     <h2 id="footer">En alt Kısım</h2>
+    
+</body>
+</html>
